add user task and calculate duration in progress

--- a/public/css/template.css
+++ b/public/css/template.css
@@ -3,6 +3,7 @@
 .tree-menu > ul { padding: 0; }
 
 .tree-menu a {
+    /*background: linear-gradient(90deg, #20DE13 52%, #efefef 27%);*/
     display: block;
     vertical-align: middle;
     text-decoration: none;
