--- a/public/css/template.css
+++ b/public/css/template.css
@@ -30,6 +30,14 @@
     transition: background-color 0.1s linear;
 }
 
+.tree-menu a button{
+    display: none;
+}
+
+.tree-menu a:hover > button{
+    display: block;
+}
+
 .tree-menu .active > a:hover,
 .tree-menu .selected > a,
 .tree-menu a:hover { background-color: #c6cdde; }
