--- a/public/css/style.css
+++ b/public/css/style.css
@@ -267,3 +267,35 @@ body {
 .fn-gantt .navigate .nav-end:hover {
 	background-position: -170px -20px;
 }
+
+/* Search */
+
+#recherche {
+	width:208px;
+	height:24px;
+	background:white;
+	box-shadow:1px 1px 2px rgba(0,0,0,.3) inset;
+	border-radius:2em;
+}
+
+#recherche .loupe {
+	background:url(http://www.larevuedekenza.fr/wp-content/themes/quarter/images/sidebar/loupe.png) no-repeat 0 0;
+	width:24px;
+}
+
+#recherche input {
+	outline:0;
+	border:0;
+	margin:0;
+	height:24px;
+	float:left;
+	display:block;
+}
+
+#recherche input[type=text] {
+	font:300 12px HelveticaNeue-Light, "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	background:none;
+	width:180px;
+	padding:0 9px;
+	color:#666;
+}
